--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <title>碧依さくちゃんに愛を届けるゲーム</title>
+        <title>碧依さくらちゃんに愛を届けるゲーム</title>
+        <link rel="icon" href="assets/hanabira_icon.png">
         <script src="https://cdn.jsdelivr.net/npm/phaser@v3.87.0/dist/phaser.js"></script>
         <script src="./main.js"></script> 
         <style type="text/css">
